<resources>
    <string name="nome_aplicacao">AppDoacao</string>
    <string name="cadastro">Cadastro</string>
    <string name="login">LogIn</string>
    <string name="aguarde">Por favor, aguarde&#8230;</string>
    <string name="processando">Processando&#8230;</string>
    <string name="login_sucesso">Login feito com sucesso!</string>
    <string name="cadastro_sucesso">Cadastro feito com sucesso!</string>
    <string name="login_erro">Login ou senha inválidos. Tente novamente.</string>
    <string name="cadastro_erro">Ops&#8230; Ocorreu algum erro no Cadastro. Tente novamente.</string>
    <string name="obrigatorio">Campo obrigatório</string>
    <string name="cep">CEP</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="cpf">CPF</string>
    <string name="botao_cadastro">Finalizar Cadastro</string>
    <string name="nomeUsuario">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="dataDeNascimento">Data de Nascimento</string>
    <string name="endereco">Endereço</string>
    <string name="paginaInicial">Página Inicial</string>
    <string name="dataDeNascimentoInvalida">Data de Nascimento inválida</string>
    <string name="telefoneInvalido">Telefone inválido</string>
    <string name="cepInvalido">CEP inválido</string>
    <string name="cpfInvalido">CPF inválido</string>
    <string name="senhaInvalida">Senha com no mínimo 8 caracteres</string>
    <string name="bemvindo">Bem vindo(a): </string>
    <string name="selecionar">Selecione o que deseja realizar</string>
    <string name="formulario">Formulário</string>
    <string name="lista">Lista de Animais</string>
    <string name="pergunta1">Quanto tempo você passa fora de casa?</string>
    <string name="textoRadioButton1">0 a 6 horas/dia</string>
    <string name="textoRadioButton2">6 a 12 horas/dia</string>
    <string name="textoRadioButton3">12 a 18 horas/dia</string>
    <string name="textoRadioButton4">18 a 24 horas/dia</string>
    <string name="textoRadioButton5">Só fico em casa de fim de semana</string>
    <string name="pergunta2">O que você costuma fazer em seu tempo livre?</string>
    <string name="textoRadioButton6">Praticar atividade física</string>
    <string name="textoRadioButton7">Utilizar o computador</string>
    <string name="textoRadioButton8">Assistir televisão</string>
    <string name="textoRadioButton9">Viajar</string>
    <string name="textoRadioButton10">Receber visitas</string>
    <string name="botao_form1">Próxima etapa</string>
    <string name="pergunta3">Quantas pessoas moram contigo?</string>
    <string name="textoRadioButton11">0 – Moro sozinho (a)</string>
    <string name="textoRadioButton12">1</string>
    <string name="textoRadioButton13">2</string>
    <string name="textoRadioButton14">3</string>
    <string name="textoRadioButton15">4 ou mais</string>
    <string name="pergunta4">Dentre estas características, qual você se identifica mais?</string>
    <string name="textoRadioButton16">Carinhoso (a)</string>
    <string name="textoRadioButton17">Agitado (a)</string>
    <string name="textoRadioButton18">Depressivo (a)</string>
    <string name="textoRadioButton19">Organizado (a)</string>
    <string name="textoRadioButton20">Distraído (a)</string>
    <string name="botao_form2">Próxima etapa</string>
    <string name="pergunta5">Quantos menores de 12 anos vivem em sua moradia?</string>
    <string name="textoRadioButton21">0</string>
    <string name="textoRadioButton22">1</string>
    <string name="textoRadioButton23">2</string>
    <string name="textoRadioButton24">3</string>
    <string name="textoRadioButton25">4 ou mais</string>
    <string name="pergunta6">Quantos animais você possui?</string>
    <string name="textoRadioButton26">0</string>
    <string name="textoRadioButton27">1</string>
    <string name="textoRadioButton28">2</string>
    <string name="textoRadioButton29">3</string>
    <string name="textoRadioButton30">4 ou mais</string>
    <string name="botao_form3">Próxima etapa</string>
    <string name="pergunta7">Dentre as opções a seguir, como você caracteriza a sua moradia?</string>
    <string name="textoRadioButton31">Apartamento sem varanda</string>
    <string name="textoRadioButton32">Apartamento com varanda</string>
    <string name="textoRadioButton33">Casa com quintal</string>
    <string name="textoRadioButton34">Casa sem quintal</string>
    <string name="textoRadioButton35">Sítio/Chácara</string>
    <string name="pergunta8">Qual o tamanho da sua moradia?</string>
    <string name="textoRadioButton36">0 a 30m²</string>
    <string name="textoRadioButton37">31 a 80m²</string>
    <string name="textoRadioButton38">81 a 130m²</string>
    <string name="textoRadioButton39">131 a 181m²</string>
    <string name="textoRadioButton40">Acima de 181m²</string>
    <string name="botao_form4">Finalizar</string>
    <string name="telaAnimal">Tela Animal</string>
    <string name="localizacaoOng">Map</string>
    <string name="realizar_formulario">Formulário de Compatibilidade</string>
    <string name="verificar_lista">Verificar Lista de Animais</string>
    <string name="logo">Logo</string>
    <string name="formulario_erro">Por favor, verifique se selecionou alguma resposta.</string>
    <string name="logout">Logout</string>
    <string name="desconectado">Você foi desconectado com sucesso!</string>
    <string name="email_utilizado">Email já utilizado. Por favor, selecione outro email.</string>
    <string name="erro_email">com.google.firebase.auth.FirebaseAuthUserCollisionException: The email address is already in use by another account.</string>
    <string name="calculo_compatibilidade">Estamos selecionando os melhores animais para você!</string>
    <string name="listaAnimais_erro">Por favor, realize o formulário antes de prosseguir.</string>
    <string name="telaAnimal_porte">Porte</string>
    <string name="telaAnimal_pelagem">Pelagem</string>
    <string name="telaAnimal_cor">Cor</string>
    <string name="telaAnimal_idade">Idade</string>
    <string name="telaAnimal_ong">ONG</string>
    <string name="telaAnimal_fotoAnimal">Foto do Animal</string>
    <string name="telaAnimal_alergias">Alergias</string>
    <string name="telaAnimal_doencas">Doenças</string>
    <string name="inserir_animal">Encontrei um animal para adoção!</string>
    <string name="dadosAnimalNovo">Dados do Animal</string>
    <string name="tirarFoto">Tirar foto</string>
    <string name="permissao_camera">É necessário aceitar as permissões para utilizar essa função.</string>
    <string name="upload">Fazendo upload da imagem&#8230;</string>
    <string name="upload_sucesso">Upload feito com sucesso!</string>
    <string name="caracteristicas">Características</string>
    <string name="corAnimal">Cor</string>
    <string name="descricaoAnimal">Descrição</string>
    <string name="generoAnimal">Gênero</string>
    <string name="idadeAnimal">Idade</string>
    <string name="nomeAnimal">Nome</string>
    <string name="pelagemAnimal">Pelagem</string>
    <string name="tamanhoAnimal">Tamanho</string>
    <string name="tipoAnimal">Tipo</string>
    <string name="historicoMedico">Histórico Médico</string>
    <string name="alergiaAnimal">Alergias</string>
    <string name="doencaAnimal">Doenças</string>
    <string name="contatos">Dados para contato</string>
    <string name="emailContato">Email</string>
    <string name="enderecoContato">Endereço</string>
    <string name="nomeContato">Nome</string>
    <string name="telefoneContato">Telefone</string>
    <string name="personalidade">Personalidade</string>
    <string name="agitado">Agitado</string>
    <string name="amigavel">Amigável</string>
    <string name="carente">Carente</string>
    <string name="carinhoso">Carinhoso</string>
    <string name="inserirAnimal">Inserir Animal</string>
    <string name="inserirSucesso">Animal inserido com sucesso!</string>
    <string name="compatibilidade">Compatibilidade</string>
</resources>
