<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hcantelli.appdoacao.TelaAnimal">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-501dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fotoAnimal"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/telaAnimal_fotoAnimal"
                />

            <TextView
                android:id="@+id/nomeAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fotoAnimal"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idPorte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/fotoAnimal"
                android:layout_below="@+id/nomeAnimal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/telaAnimal_porte"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tamanhoAnimal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/idPorte"
                android:layout_alignBottom="@+id/idPorte"
                android:layout_alignStart="@+id/pelagemAnimal"
                android:gravity="center" />

            <TextView
                android:id="@+id/idPelagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/idPorte"
                android:layout_below="@+id/idPorte"
                android:layout_marginTop="8dp"
                android:text="@string/telaAnimal_pelagem"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pelagemAnimal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/idPelagem"
                android:layout_alignBottom="@+id/idPelagem"
                android:layout_alignEnd="@+id/fotoAnimal"
                android:layout_marginEnd="92dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/idCor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/idPelagem"
                android:layout_below="@+id/idPelagem"
                android:layout_marginTop="8dp"
                android:text="@string/telaAnimal_cor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/corAnimal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/idCor"
                android:layout_alignBottom="@+id/idCor"
                android:layout_alignStart="@+id/tamanhoAnimal"
                android:gravity="center" />

            <TextView
                android:id="@+id/idIdade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/idCor"
                android:layout_below="@+id/idCor"
                android:layout_marginTop="8dp"
                android:text="@string/telaAnimal_idade"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idadeAnimal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/itensAnimal"
                android:layout_alignStart="@+id/corAnimal"
                android:gravity="center" />

            <TextView
                android:id="@+id/itensAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/idIdade"
                android:layout_below="@+id/idIdade"
                android:layout_marginTop="8dp"
                android:maxLines="3"
                android:minLines="2"
                android:text="Castrado\nPossui pão com geléia" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itensAnimal"
                android:layout_marginTop="16dp"
                android:background="@drawable/borda2">

                <TextView
                    android:id="@+id/descricaoAnimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="10"
                    android:minLines="3"
                    android:text="Encontrado voando pelo universo.\n\nTinha um pão com geléia grudado no corpo, que não foi tirado devido ao amor demonstrado pelo pão.\n\nGosta de voar e ouvir música."
                    android:textAlignment="center" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_alignStart="@+id/frameLayout"
                android:layout_below="@+id/frameLayout"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:background="@drawable/borda1"
                >

                <TextView
                    android:id="@+id/nomeOng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/nome"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="15dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/telefoneOng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/telefone"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp" />

                <TextView
                    android:id="@+id/emailOng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/email"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"/>

                <TextView
                    android:id="@+id/enderecoOng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/endereco"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="19dp"/>


            </LinearLayout>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignStart="@+id/relativeLayout"
                android:layout_below="@+id/relativeLayout"
                android:layout_marginTop="24dp"
                tools:context="com.example.hcantelli.appdoacao.ListaDeAnimais" />


        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>